[tool.poetry]
name = "git-counter"
version = "0.1.0"
description = ""
authors = ["Mike Zimin <mikeziminio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
aiohttp = "^3.9.0"
pandas = "^2.1.3"
aiodns = "^3.1.1"
fastapi = "^0.104.1"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"
plotly = "^5.18.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
celery = "^5.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
